# Project_Dodge3D

./: .gitignore  Build_Debug.bat  Build_MinSizeRel.bat  Build_RelWithDebInfo.bat  Build_Release.bat  Build_Shipping.bat  CMakeLists.txt  GenerateProjectFiles_vs2019.bat  GenerateProjectFiles_vs2022.bat  HotReload_vs2019.bat  HotReload_vs2022.bat  Package_Debug.bat  Package_MinSizeRel.bat  Package_RelWithDebInfo.bat  Package_Release.bat  README.md  RunClient_Debug.bat  RunClient_MinSizeRel.bat  RunClient_RelWithDebInfo.bat  RunClient_Release.bat  RunDodge3D_Debug.bat  RunDodge3D_MinSizeRel.bat  RunDodge3D_RelWithDebInfo.bat  RunDodge3D_Release.bat  RunGeometryExporter_Debug.bat  RunGeometryExporter_MinSizeRel.bat  RunGeometryExporter_RelWithDebInfo.bat  RunGeometryExporter_Release.bat  Run_Debug.bat  Run_Release.bat  Run_Shipping.bat  premake5.lua
Client/: CMakeLists.txt  Config.json
Client/Include/: Bullet.h  BulletSpawner.h  ClientApplication.h  Config.h.in  DemoScene.h  EastWall.h  Floor.h  GameObject.h  GameScene.h  MovableCamera.h  NorthWall.h  PlayLogger.h  Player.h  RankScene.h  Resource.h  ResourceScript.rc.in  ShadowScene.h  SouthWall.h  StartScene.h  StaticLight.h  UIBoard.h  UIMainTitle.h  WestWall.h
Client/Resource/: Back_dxt1.dds  Back_dxt5.dds  Bottom_4x4.astc  Bottom_dxt1.dds  Bottom_dxt5.dds  Cube.mtl  Earth_dxt1.dds  Earth_dxt3.dds  Earth_dxt5.dds  Floor.mtl  Front_4x4.astc  Front_dxt1.dds  Front_dxt5.dds  Left_dxt1.dds  Left_dxt5.dds  Right_4x4.astc  Right_dxt1.dds  Right_dxt5.dds  Sphere.mtl  Top_dxt1.dds  Top_dxt5.dds  container4x4.astc  container_dxt1.dds  container_dxt3.dds
Client/Resource/Test/: container6x6.astc  container_dxt5.dds
Client/Script/: Run.bat  RunClient.bat
Client/Shader/: DebugQuad.frag  DebugQuad.vert  EffectLights.frag  EffectLights.vert  Light.frag  LightView.frag  LightView.vert  PointShadows.frag  PointShadows.vert  PointShadowsDepth.frag  PointShadowsDepth.geom  Shadow.frag  Shadow.vert
Client/Source/: Application.cpp  Bullet.cpp  BulletSpawner.cpp  ClientApplication.cpp  DemoScene.cpp  EastWall.cpp  Floor.cpp  GameObject.cpp  GameScene.cpp  Main.cpp  MovableCamera.cpp  NorthWall.cpp  PlayLogger.cpp  Player.cpp  RankScene.cpp  ShadowScene.cpp  SouthWall.cpp  StartScene.cpp  StaticLight.cpp  UIBoard.cpp  UIMainTitle.cpp  WestWall.cpp
Dodge3D/: CMakeLists.txt
Dodge3D/Include/: Config.h.in  Resource.h  ResourceScript.rc.in
Dodge3D/Script/: RunDodge3D.bat
Dodge3D/Source/: EastWall.cpp  GameObject.cpp  Main.cpp  NorthWall.cpp  PlayLogger.cpp  WestWall.cpp
DodgeBall/: CMakeLists.txt
DodgeBall/Inc/: Assertion.h  CommandLineUtils.h  EastWall.h  GameObject.h  GeometryGenerator.h  GeometryShader2D.h  GeometryShader3D.h  IApplication.h  IObject.h  ObjectManager.h  PlayLogger.h  RenderManager.h  ResourceManager.h  ResourceScript.rc.in  Skybox.h  SouthWall.h  StaticMesh.h  StringUtils.h  UIBoard.h
DodgeBall/Inc/GL/: GLAssert.h  GLError.h  GLManager.h  GLResource.h  ITexture.h  IndexBuffer.h  Shader.h  Texture2D.h  UniformBuffer.h  VertexBuffer.h
DodgeBall/Inc/GLFW/: GLFWAssert.h  GLFWError.h  GLFWManager.h
DodgeBall/Inc/Utils/: Assertion.h  (+4 more)
DodgeBall/Include/: Config.h.in  FileUtils.h  IManager.h  IScene.h  LightShader.h  Macro.h  PostEffectShader.h  RankScene.h  Shader.h  Sound.h  Sphere3D.h  TTFont.h  Texture2D.h  Transform.h  UIPanel.h  Window.h
DodgeBall/Source/: Bullet.cpp  BulletSpawner.cpp  GameTimer.cpp  GeometryShader2D.cpp  LightShader.cpp  Main.cpp  ObjectManager.cpp  ResourceManager.cpp  Shader.cpp  ShadowMap.cpp  Texture2D.cpp  TextureShader2D.cpp  TextureShader2D.h  TextureUtils.h  UIBoard.cpp  UIPanel.cpp
DodgeBall/Src/: Camera3D.cpp  CommandLineUtils.cpp  FileUtils.cpp  Floor.cpp  GeometryShader3D.cpp  GlyphShader2D.cpp  GlyphShader2D.h  IApplication.cpp  InputManager.cpp  Main.cpp  Material.cpp  PlayLogger.cpp  RankScene.cpp  ShadowShader.cpp  Skybox.cpp  TTFont.cpp  Window.cpp
GameEngine/: CMakeLists.txt  project_config.lua
GameEngine/Include/: Assertion.h  AudioManager.h  Box3D.h  Camera3D.h  CommandLineUtils.h  CrashManager.h  CubeMap.h  DirectionalLight.h  FileManager.h  FileUtils.h  Framebuffer.h  GLAssertion.h  GameObject.h  GameTimer.h  GeometryGenerator.h  GeometryUtils.h  IApplication.h  IGameFramework.h  IResource.h  IScene.h  IShape3D.h  InputManager.h  Light.h  Macro.h  Material.h  MathUtils.h  Mesh.h  ObjectManager.h  PointLight.h  RenderManager.h  ResourceManager.h  SceneManager.h  Shader.h  ShadowMap.h  ShadowShader.h  Skybox.h  Sound.h  Sphere3D.h  SpotLight.h  StaticMesh.h  (+12 more)
GameEngine/Script/: BuildSolution.bat  GenerateProjectFiles.bat  Package.bat  Run.bat
GameEngine/Shader/: BlurEffect.frag  GaussianBlurEffect.frag  Glyph2D.frag  Glyph2D.vert  Light.frag  LightEffect.frag  MeshColor.vert  MeshColorPass.vert  MeshTextureMap.frag  MeshTextureMap.vert  Shader.frag  Shader.vert  Skybox.frag  Skybox.vert  Texture2D.frag  Texture2D.vert
GameEngine/Source/: AstcUtils.cpp  AstcUtils.h  AudioManager.cpp  Box3D.cpp  CommandLineUtils.cpp  CrashManager.cpp  CubeMap.cpp  FileManager.cpp  FileUtils.cpp  Framebuffer.cpp  GameTimer.cpp  GeometryGenerator.cpp  GeometryShader2D.cpp  GeometryShader2D.h  GeometryShader3D.cpp  GeometryShader3D.h  GeometryUtils.cpp  GlyphShader2D.cpp  GlyphShader2D.h  IApplication.cpp  IGameFramework.cpp  InputManager.cpp  Light.cpp  LightShader.cpp  Material.cpp  Mesh.cpp  ObjectManager.cpp  PostEffectShader.cpp  RenderManager.cpp  ResourceManager.cpp  SceneManager.cpp  Shader.cpp  ShadowMap.cpp  ShadowShader.cpp  Skybox.cpp  Sound.cpp  Sphere3D.cpp  StaticMesh.cpp  StringUtils.cpp  TTFont.cpp  (+13 more)
GeometryExporter/: CMakeLists.txt
GeometryExporter/Include/: DirectionalLight.h  DirectionalLightShader.h  LightProperties.h  MultiLightsShader.h  PointLight.h  Properties.h  SpotLight.h
GeometryExporter/Script/: RunGeometryExporter.bat
GeometryExporter/Shader/: DirectionalLight.frag  MultiLights.frag  MultiLights.vert  MultipleLights.frag
GeometryExporter/Source/: DirectionalLightShader.cpp  LightProperties.cpp  Main.cpp  MultiLightsShader.cpp  Properties.cpp
(+23 files in other folders)
