# CMake의 최소 버전을 명시합니다.
cmake_minimum_required(VERSION 3.27)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

set(CLIENT_PATH ${CMAKE_CURRENT_SOURCE_DIR})
set(CLIENT_INCLUDE "${CLIENT_PATH}/Include")
set(CLIENT_SOURCE "${CLIENT_PATH}/Source")
set(CLIENT_SCRIPT "${CLIENT_PATH}/Script")
set(CLIENT_SHADER "${CLIENT_PATH}/Shader")

set(CLIENT_ICON_PATH "${CLIENT_PATH}/Resource/Icon/Icon.ico")
configure_file("${CLIENT_INCLUDE}/ResourceScript.rc.in" "${CLIENT_INCLUDE}/ResourceScript.rc")

set(WINDOW_TITLE "Dodge3D")
set(WINDOW_X 100)
set(WINDOW_Y 100)
set(WINDOW_W 1000)
set(WINDOW_H 800)
set(WINDOW_RESIZE 0)
set(WINDOW_FULLSCREEN 0)
set(WINDOW_VSYNC 1)
set(WINDOW_IMGUI 1)
configure_file("${CLIENT_INCLUDE}/Config.h.in" "${CLIENT_INCLUDE}/Config.h")

file(GLOB_RECURSE CLIENT_INCLUDE_FILE "${CLIENT_INCLUDE}/*")
file(GLOB_RECURSE CLIENT_SOURCE_FILE "${CLIENT_SOURCE}/*")
file(GLOB_RECURSE CLIENT_SCRIPT_FILE "${CLIENT_SCRIPT}/*" )
file(GLOB_RECURSE CLIENT_SHADER_FILE "${CLIENT_SHADER}/*")

add_executable(Dodge3D
    WIN32
    ${CLIENT_INCLUDE_FILE}
    ${CLIENT_SOURCE_FILE}
    ${CLIENT_SCRIPT_FILE}
    ${CLIENT_SHADER_FILE}
)

target_include_directories(Dodge3D PUBLIC ${CLIENT_INCLUDE} ${GAME_ENGINE_INCLUDE})
target_link_libraries(Dodge3D PUBLIC GameEngine)

source_group(Include FILES ${CLIENT_INCLUDE_FILE})
source_group(Source FILES ${CLIENT_SOURCE_FILE})
source_group(Script FILES ${CLIENT_SCRIPT_FILE})
source_group(Shader FILES ${CLIENT_SHADER_FILE})

set(COMMANDLINE "devMode=on rootPath=${CMAKE_SOURCE_DIR}/")
set_target_properties(Dodge3D PROPERTIES VS_DEBUGGER_COMMAND_ARGUMENTS ${COMMANDLINE})