# CMake의 최소 버전을 명시합니다.
cmake_minimum_required(VERSION 3.27)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

set(DODGE3D_PATH ${CMAKE_CURRENT_SOURCE_DIR})
set(DODGE3D_INCLUDE "${DODGE3D_PATH}/Include")
set(DODGE3D_SOURCE "${DODGE3D_PATH}/Source")
set(DODGE3D_SCRIPT "${DODGE3D_PATH}/Script")
set(DODGE3D_SHADER "${DODGE3D_PATH}/Shader")

set(DODGE3D_ICON_PATH "${DODGE3D_PATH}/Resource/Icon/Icon.ico")
configure_file("${DODGE3D_INCLUDE}/ResourceScript.rc.in" "${DODGE3D_INCLUDE}/ResourceScript.rc")

set(WINDOW_TITLE "Dodge3D")
set(WINDOW_X 100)
set(WINDOW_Y 100)
set(WINDOW_W 1000)
set(WINDOW_H 800)
set(WINDOW_RESIZE 0)
set(WINDOW_FULLSCREEN 0)
set(WINDOW_VSYNC 1)
set(WINDOW_IMGUI 1)
configure_file("${DODGE3D_INCLUDE}/Config.h.in" "${DODGE3D_INCLUDE}/Config.h")

file(GLOB_RECURSE DODGE3D_INCLUDE_FILE "${DODGE3D_INCLUDE}/*")
file(GLOB_RECURSE DODGE3D_SOURCE_FILE "${DODGE3D_SOURCE}/*")
file(GLOB_RECURSE DODGE3D_SCRIPT_FILE "${DODGE3D_SCRIPT}/*" )
file(GLOB_RECURSE DODGE3D_SHADER_FILE "${DODGE3D_SHADER}/*")

add_executable(Dodge3D
    WIN32
    ${DODGE3D_INCLUDE_FILE}
    ${DODGE3D_SOURCE_FILE}
    ${DODGE3D_SCRIPT_FILE}
    ${DODGE3D_SHADER_FILE}
)

target_include_directories(Dodge3D PUBLIC ${DODGE3D_INCLUDE} ${GAME_ENGINE_INCLUDE})
target_link_libraries(Dodge3D PUBLIC GameEngine)

source_group(Include FILES ${DODGE3D_INCLUDE_FILE})
source_group(Source FILES ${DODGE3D_SOURCE_FILE})
source_group(Script FILES ${DODGE3D_SCRIPT_FILE})
source_group(Shader FILES ${DODGE3D_SHADER_FILE})

set(COMMANDLINE "devMode=on rootPath=${CMAKE_SOURCE_DIR}/")
set_target_properties(Dodge3D PROPERTIES VS_DEBUGGER_COMMAND_ARGUMENTS ${COMMANDLINE})