# CMake의 최소 버전을 명시합니다.
cmake_minimum_required(VERSION 3.27)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

set(GEOMETRY_EXPORTER_PATH ${CMAKE_CURRENT_SOURCE_DIR})
set(GEOMETRY_EXPORTER_INCLUDE "${GEOMETRY_EXPORTER_PATH}/Include")
set(GEOMETRY_EXPORTER_SOURCE "${GEOMETRY_EXPORTER_PATH}/Source")
set(GEOMETRY_EXPORTER_SCRIPT "${GEOMETRY_EXPORTER_PATH}/Script")
set(GEOMETRY_EXPORTER_SHADER "${GEOMETRY_EXPORTER_PATH}/Shader")

file(GLOB_RECURSE GEOMETRY_EXPORTER_INCLUDE_FILE "${GEOMETRY_EXPORTER_INCLUDE}/*")
file(GLOB_RECURSE GEOMETRY_EXPORTER_SOURCE_FILE "${GEOMETRY_EXPORTER_SOURCE}/*")
file(GLOB_RECURSE GEOMETRY_EXPORTER_SCRIPT_FILE "${GEOMETRY_EXPORTER_SCRIPT}/*" )
file(GLOB_RECURSE GEOMETRY_EXPORTER_SHADER_FILE "${GEOMETRY_EXPORTER_SHADER}/*")

add_executable(GeometryExporter
    WIN32
    ${GEOMETRY_EXPORTER_INCLUDE_FILE}
    ${GEOMETRY_EXPORTER_SOURCE_FILE}
    ${GEOMETRY_EXPORTER_SCRIPT_FILE}
    ${GEOMETRY_EXPORTER_SHADER_FILE}
)

target_include_directories(GeometryExporter PUBLIC ${GEOMETRY_EXPORTER_INCLUDE} ${GAME_ENGINE_INCLUDE})
target_link_libraries(GeometryExporter PUBLIC GameEngine)

source_group(Include FILES ${GEOMETRY_EXPORTER_INCLUDE_FILE})
source_group(Source FILES ${GEOMETRY_EXPORTER_SOURCE_FILE})
source_group(Script FILES ${GEOMETRY_EXPORTER_SCRIPT_FILE})
source_group(Shader FILES ${GEOMETRY_EXPORTER_SHADER_FILE})

set(COMMANDLINE "rootPath=${CMAKE_SOURCE_DIR}/ title=GeometryExporter x=200 y=200 w=1000 h=800 resize=false fullscreen=false vsync=true imgui=true")
set_target_properties(GeometryExporter PROPERTIES VS_DEBUGGER_COMMAND_ARGUMENTS ${COMMANDLINE})